doc/owasp-zap/k8s-files/zap-scan-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zap-scan
  labels:
    app: zap-scan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zap-scan
  template:
    metadata:
      labels:
        app: zap-scan
    spec:
      securityContext:
        # Get it running: echo $(id -u):$(id -g)
        fsGroup: 1000
      containers:
        - name: zap
          # image: ghcr.io/zama-ai/security-hub/sec/zap:2.16.1
          image: zaproxy/zap-stable:2.16.1
          lifecycle:
            postStart:
              exec:
                command:
                  - sh
                  - -c
                  - >
                    mkdir -p /sec-reports/zap/
          command: ["tail"]
          # Required to keep running the pod
          args: ["-f", "/dev/null"]
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          volumeMounts:
            - name: zap-scan-policies-dir
              subPath: my-policy-01
              mountPath: /home/zap/.ZAP/policies/my-policy-01.policy
            - name: zap-scan-policies-dir
              subPath: my-policy-02
              mountPath: /home/zap/.ZAP/policies/my-policy-02.policy
            - name: zap-scan-scripts-dir
              subPath: run-zap-and-defectdojo-reimport-sh
              mountPath: /zap/wrk/run-zap-and-defectdojo-reimport.sh
            - name: zap-scan-plans-sample-dir
              mountPath: /zap/wrk/plans-sample/
            - name: zap-scan-plans-extra-dir
              mountPath: /zap/wrk/plans-extra/

            - name: sec-reports-vol
              mountPath: /sec-reports/
      volumes:
        - name: zap-scan-policies-dir
          configMap:
            name: zap-scan-cm-policies
        - name: zap-scan-scripts-dir
          configMap:
            name: zap-scan-cm-scripts
        - name: zap-scan-plans-sample-dir
          configMap:
            name: zap-scan-cm-plans-sample
        - name: zap-scan-plans-extra-dir
          configMap:
            name: zap-scan-cm-plans-extra

        - name: sec-reports-vol
          persistentVolumeClaim:
            claimName: sec-reports-pvc
---
# kubectl -n dast apply -f 'zap-scan-configmap-*.yaml'
# kubectl -n dast apply -f zap-scan-deployment.yaml 
# kubectl exec -it -n dast deployment.apps/zap-scan -- bash
# $ ls -la /sec-reports/
# $ ls -la /sec-reports/trivy-op/
# $ ls -la /sec-reports/zap/
# $ now=$(date +%y%m%d-%H%M%S)
# $ REPORT_DATE=$now REPORT_DIR=/sec-reports/zap PRODUCT_NAME=JUICESHOP zap.sh -cmd -autorun /zap/wrk/plans/scan-plan-test1.yaml
