doc/owasp-zap/k8s-files/sec-reports-viewer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sec-reports-viewer
  labels:
    app: sec-reports-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sec-reports-viewer
  template:
    metadata:
      labels:
        app: sec-reports-viewer
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: zap-scan
              topologyKey: kubernetes.io/hostname
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine3.21-slim
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          # lifecycle:
          #   postStart:
          #     exec:
          #       command:
          #         - sh
          #         - -c
          #         - >
          #           mkdir -p /usr/share/nginx/html/sec-reports/zap &&
          #           mkdir -p /usr/share/nginx/html/sec-reports/trivy &&
          #           mkdir -p /usr/share/nginx/html/sec-reports/trivy-op &&
          #           mkdir -p /usr/share/nginx/html/sec-reports/falco
          volumeMounts:
            - name: report-viewer-cm
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx-conf
            - name: report-viewer-cm
              mountPath: /usr/share/nginx/html/index.html
              subPath: nginx-index-html
            - name: report-viewer-cm
              mountPath: /usr/share/nginx/html/zap-logo.png
              subPath: zap-logo-png-b64
            - name: sec-reports-dir
              mountPath: /usr/share/nginx/html/sec-reports/
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: http
      volumes:
        - name: report-viewer-cm
          configMap:
            name: sec-reports-viewer
        - name: sec-reports-dir
          persistentVolumeClaim:
            claimName: sec-reports-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sec-reports-viewer
  labels:
    app: sec-reports-viewer
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  selector:
    app: sec-reports-viewer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: sec-reports-viewer
#   labels:
#     app: sec-reports-viewer
# spec:
#   ingressClassName: tailscale
#   rules:
#     - host: dast-report-viewer
#       http:
#         paths:
#           - backend:
#               service:
#                 name: sec-reports-viewer
#                 port:
#                   name: http
#             path: /
#             pathType: ImplementationSpecific
#   tls:
#     - hosts:
#       - dast-report-viewer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sec-reports-viewer
  labels:
    app: sec-reports-viewer
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol: HTTPS 
spec:
  ingressClassName: nginx
  rules:
    - host: sec-reports-viewer.tawa.local
      http:
        paths:
          - backend:
              service:
                name: sec-reports-viewer
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - sec-reports-viewer.tawa.local
---

# kubectl -n dast apply -f sec-reports-viewer-deployment.yaml
# kubectl exec -it -n dast deployment.apps/sec-reports-viewer -- sh
# $ ls -la /usr/share/nginx/html/sec-reports/
# $ cat /etc/nginx/conf.d/default.conf
