doc/owasp-zap/k8s-files/zap-report-viewer-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zap-report-viewer
  labels:
    app: zap-report-viewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zap-report-viewer
  template:
    metadata:
      labels:
        app: zap-report-viewer
      annotations:
        configmap-hash: cc6bc66702d14a0010b77fc39994faf5af34006f879e9156e302f0b17687f9c2
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: zap-scan
              topologyKey: kubernetes.io/hostname
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine3.21
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
            - name: report-viewer-cm
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx-conf
            - name: report-viewer-cm
              mountPath: /usr/share/nginx/html/index.html
              subPath: nginx-index-html
            - name: report-viewer-cm
              mountPath: /usr/share/nginx/html/zap-logo.png
              subPath: zap-logo-png-b64
            - name: zap-reports-dir
              mountPath: /usr/share/nginx/html/zap-reports-dir
      volumes:
        - name: report-viewer-cm
          configMap:
            name: zap-report-viewer
        - name: zap-reports-dir
          persistentVolumeClaim:
            claimName: zap-reports-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: zap-report-viewer
  labels:
    app: zap-report-viewer
spec:
  type: ClusterIP
  internalTrafficPolicy: Cluster
  selector:
    app: zap-report-viewer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zap-report-viewer
  labels:
    app: zap-report-viewer
spec:
  ingressClassName: tailscale
  rules:
    - host: dast-report-viewer
      http:
        paths:
          - backend:
              service:
                name: zap-report-viewer
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - dast-report-viewer
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: zap-report-viewer
#   labels:
#     app: zap-report-viewer
#   # annotations:
#   #   nginx.ingress.kubernetes.io/backend-protocol: HTTPS 
# spec:
#   ingressClassName: nginx
#   rules:
#     - host: dast-report-viewer.tawa.local
#       http:
#         paths:
#           - backend:
#               service:
#                 name: zap-report-viewer
#                 port:
#                   name: http
#             path: /
#             pathType: ImplementationSpecific
#   tls:
#     - hosts:
#       - dast-report-viewer.tawa.local
# ---
